completed pokedex assignment2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body id = "toggle">
 
-    <h1 class="shopOwnerQuote">What card are you look for traveler?</h1>
+    <h1 class="shopOwnerQuote">What card are you looking for traveler?</h1>
 
     <header>
         <img id="shopOwner" src="https://image.cdn2.seaart.ai/2023-11-29/24036724695920645/e135a0a4d83979e6da16e9406568ab26b49bd9ac_high.webp"/>
